# mem0-mcp

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  logging_reference.py  pyproject.toml  requirements.txt  server.py
.claude/: settings.json
.claude/skills/api-error-patterns/: SKILL.md
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  claude.yml  publish-docker.yml  publish-pypi.yml
memcp/: __init__.py  __main__.py  auth.py  config.py  logging.py  server.py  tools.py  types.py
memcp/backend/: __init__.py  base.py  in_memory.py  mem0.py
tests/: conftest.py  test_auth.py  test_backend_mem0.py  test_backend_mem0_mock.py  test_backend_memory.py  test_health.py  test_mcp_integration.py  test_tools.py  test_types.py
